Modificar index.qmd - cambiar encabezado principal

--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,10 @@
 ---
-title: Presentación
 format:
   html:
     toc: false
 ---
+
+# Introducción {.unnumbered}
 
 Este sitio web presenta la documentación y el código fuente utilizados para generar mapas de uso agropecuario y bosques de Costa Rica. El correspondiente al año 2020 se muestra en la @fig-mapa-uso-agropecuario-bosques-2020.
 
