--- a/contenido/2020/01-datos.qmd
+++ b/contenido/2020/01-datos.qmd
@@ -4,7 +4,7 @@ format:
     toc: false
 ---
 
-# Fuentes de datos {.unnumbered}
+# Datos {.unnumbered}
 
 ```{r}
 #| label: carga-paquetes
@@ -22,10 +22,25 @@ library(DT)
 #| warning: false
 
 datos <- data.frame(
-  Orden = c(1, 2, 3, 4),
-  Capa = c("Red vial", "Áreas Silvestres Protegidas", "Humedales", "Patrimonio Natural del Estado"),
-  Tipo = c("Vectorial", "Vectorial", "Vectorial", "Vectorial"),
-  Fuente = c("MOPT", "SINAC", "SINAC", "SINAC")
+  Orden = c(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16),
+  Capa = c(
+    "Red vial", "Áreas Silvestres Protegidas", "Humedales", "Patrimonio Natural del Estado",
+    "Caña", "Banano", "Café", "Pasto",
+    "Palma", "Piña", "Cultivos", "Páramo",
+    "Cobertura forestal", "Suelo desnudo", "Zonas urbanas", "Sin información"
+  ),
+  Tipo = c(
+    "Vectorial", "Vectorial", "Vectorial", "Vectorial",
+    "Vectorial", "Vectorial", "Vectorial", "Vectorial",
+    "Vectorial", "Vectorial", "Vectorial", "Vectorial",
+    "Vectorial", "Raster", "Raster", "Raster"
+  ),
+  Fuente = c(
+    "???", "SINAC", "SINAC", "SINAC",
+    "LAICA", "MOCUPP", "ICAFE", "MOCUPP",
+    "MOCUPP", "MOCUPP", "???", "???",
+    "SINAC", "Secretaría REDD", "Secretaría REDD", "Secretaría REDD"
+  )
 )
 ```
 
@@ -35,11 +50,11 @@ datos <- data.frame(
 #| message: false
 #| warning: false
 
-datos |> 
-  datatable(options = list(
-    rownames = FALSE,
-    pageLength = 5,
-    language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/Spanish.json')
-  ))
+datos |>
+  datatable(rownames = FALSE,
+            options = list(
+              pageLength = 16,
+              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/Spanish.json')
+            ))
 ```
 
